[package]
name = "koutendb"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
description = "Rust driver for KoutenDB"
repository = "https://github.com/puffball1567/koutendb-rust"
homepage = "https://github.com/puffball1567/koutendb"
documentation = "https://puffball1567.github.io/koutendb/"
readme = "README.md"
keywords = ["database", "nosql", "vector", "ffi", "koutendb"]
categories = ["api-bindings", "database"]
build = "build.rs"

[lib]
name = "koutendb"
path = "src/lib.rs"

[dependencies]
